--- a/index.ipynb
+++ b/index.ipynb
@@ -10,8 +10,7 @@
     "author: \"JHM\"\n",
     "date: \"2023-06-10\"\n",
     "categories: [matchmaking]\n",
-    "description: \"In Preparation.\"\n",
-    "\n",
+    "description: \"There is a gap between supply and demand in the vintage clothing market which we look to close using generative matchmaking. Work in progress.\"\n",
     "---"
    ]
   },
@@ -22,21 +21,15 @@
    "source": [
     "# *How to Sell Vintage Clothing with Generative Matchmaking*\n",
     "\n",
-    "Our goal is to generate the market conditions to sell more vintage items to more buyers. \n",
+    "The vintage clothing market suffers from a large gap between supply and demand, especially with respect to quality *used men*'s clothing. Here we describe a strategy to sell more vintage items to more buyers. \n",
     "\n",
-    "The vintage clothing market suffers from a large gap between supply and demand, especially with respect to quality *used men*'s clothing as we explain below. \n",
+    "There is large market of vintage sellers, who mainly focus on women's clothing, and one often finds shops which do not have *any* men's selection. So here is opportunity. The market demand *is* there. \n",
     "\n",
-    "We have an idea born from our searches for quality used men's clothing. There is large market of vintage sellers, who mainly focus on women's clothing, and one often finds shops which do not have *any* men's selection. So here is opportunity. The market demand *is* there. \n",
-    "\n",
-    "In this memo we are specifically interested in *male buyers*, and we propose that a distinct strategy needs be developed to connect vintage markets to male buyers. \n",
-    "\n",
-    "The popular idiom is that \"men hate shopping\". And yes, they do. \n",
-    "\n",
-    "But why? \n",
+    "In this memo we are specifically interested in *male buyers*, and we propose that a distinct strategy needs be developed to connect vintage markets to male buyers. The popular idiom is that \"men hate shopping\". And yes, they do. But why? \n",
     "\n",
     "There is a psychological element here. Basically men are mission oriented and judgemental. They do not want to waste their time searching through random racks for items that may or may not be there, which may or may not fit, at this or that price, etc.. Other people find this part of vintage hunting fun, but our working assumption is that the majority of men do *not* enjoy this. This makes for barrier between male buyers and the vintage stores. \n",
     "\n",
-    "Our goal is to be matchmakers, and connect the market. Men *want* to look good, and vintage shops are *able* to make them look good. This is our objective.\n",
+    "The barrier is removed by proactively generating suggestions to the men. Our goal is to be matchmakers, and connect the market. Men *want* to look good, and vintage shops are *able* to make them look good. This is our objective.\n",
     "\n",
     "Men want to immediately be catered to. In and out. A client shows up, with a profile, with some portfolio for their style, and you have to generate matchings for them from the available stockpile supply. \n",
     "\n",
@@ -46,11 +39,14 @@
     "\n",
     "# Statement of Problem\n",
     "\n",
-    "In the vintage problem we want to construct and generate the utility or preference pairings $b(x,y)$ between item $x$ and buyer $y$. I.e., we look to predict whether the buyer will be \"hot\" or \"cold\" towards the item. Will the client have a disposition, with some probability reflected in $b(x,y)$, to trade scarce resources for the item?\n",
+    "In the vintage problem we want to construct and generate the utility \"preference\" pairings $b(x,y)$ between item $x$ and buyer $y$. We look to predict whether the buyer will be \"hot\" or \"cold\" or \"indifferent\" towards the item. Will the client have a disposition, with some probability reflected in $b(x,y)$, to buy the item?\n",
     "\n",
-    "The vintage seller has a supply $X$, which is not well known and very opaque to the buyers $Y$. A buyer $y$ walks into the store, they have a null feeling to mostly everything except they react to the mannequins, etc.. The buyer has no sense of the client's preferences. The buyer did not even know this buyer exists before they physically walked into the store.\n",
+    "The vintage seller has a supply $X$, which is not well known and very opaque to the buyers $Y$. A buyer $y$ walks into the store, they have a null feeling to mostly everything except they react to the mannequins, etc.. The buyer has no sense of the client's preferences. The vintage seller likely doesn't know the buyer even exists before they physically walked into the store.\n",
     "\n",
     "The standard model for vintage storefront is: you have random clothes in racks, you expect buyers to show up on location, search through the racks, identify an item which appeals to them which they are willing to purchase at the market price. There appears to us many potential \"points of failure\" in the chain of sale.\n",
+    "\n",
+    "\n",
+    "# Mannequins and Know Your Audience\n",
     "\n",
     "We think that men specifically want a customized mannequin, they want the vintage store to dress the mannequin completely in outfits and ensembles which appeal to the preferences of the buyer. Is it too much to ask?\n",
     "\n",
@@ -61,6 +57,8 @@
     "\n",
     "\n",
     "# Abstract Formulation\n",
+    "\n",
+    "(Redundant?)\n",
     "\n",
     "We are given measures $\\sigma, \\tau$ on the supply $X$ and buyers $Y$, respectively. This means we don't have precise pointwise knowledge about $X,Y$, but rather measurable (\"probabilistic\") information.\n",
     "\n",
@@ -78,7 +76,10 @@
     "\n",
     "Evidently the buyer has personal features, like their height, waist size, etc. (physical dimensions), but also their aesthetics or style palette, etc.. Personally i like matching colour combinations, even of purples and reds and extreme colours, and am looking for such combinations. \n",
     "\n",
-    "Specifically, a buyer could walk in the door, we share their instagram, then we examine and review and extract the style palette from the user's instragram, and then generate a supply recommendation for the client. Direct the client towards items which we have some reasonable expectation of the client's being *warm* towards. \n"
+    "Specifically, a buyer could walk in the door, we share their instagram, then we examine and review and extract the style palette from the user's instragram, and then generate a supply recommendation for the client. Direct the client towards items which we have some reasonable expectation of the client's being *warm* towards. \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
